--- a/index.html
+++ b/index.html
@@ -1,42 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <!-- displays site properly based on user's device -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Favicon -->
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <!-- Author and description -->
+    <meta name="author" content="Brayan Miza" />
+    <meta
+      name="description"
+      content="This is my solution to the Product preview card component challenge on Frontend Mentor - Frontend Mentor challenges help you improve your coding skills by building realistic projects."
+    />
+    <!-- Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="./styles/styles.css" />
+    <title>Frontend Mentor | Intro component with sign up form</title>
+  </head>
+  <body>
+    <main>
+      <section class="intro">
+        <h1 class="intro__heading">Learn to code by watching others</h1>
+        <p class="intro__description">
+          See how experienced developers solve problems in real-time. Watching
+          scripted tutorials is great, but understanding how developers think is
+          invaluable.
+        </p>
+      </section>
+      <section class="form">
+        <h2 class="visually-hidden">Sign up form</h2>
+        <div class="form__banner shadow">
+          <p class="form__banner-description">
+            <span class="form__banner-highlight">Try it free 7 days</span> then
+            $20/mo. thereafter
+          </p>
+        </div>
+        <form class="form__form shadow">
+          <p class="form__form-field">
+            <label class="visually-hidden" for="first-name">First name</label>
+            <input
+              class="form__input"
+              type="text"
+              id="first-name"
+              placeholder="First Name"
+            />
+          </p>
+          <p>
+            <label class="visually-hidden" for="last-name">Last name</label>
+            <input
+              class="form__input"
+              type="text"
+              id="last-name"
+              placeholder="Last Name"
+            />
+          </p>
+          <p>
+            <label class="visually-hidden" for="email">Email address</label>
+            <input
+              class="form__input"
+              type="email"
+              id="email"
+              placeholder="Email Address"
+            />
+          </p>
+          <p>
+            <label class="visually-hidden" for="password">Password</label>
+            <input
+              class="form__input"
+              type="password"
+              id="password"
+              placeholder="Password"
+            />
+          </p>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Intro component with sign up form</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Learn to code by watching others
-
-  See how experienced developers solve problems in real-time. Watching scripted tutorials is great, 
-  but understanding how developers think is invaluable. 
-
-  Try it free 7 days then $20/mo. thereafter
-
-  First Name 
-  Last Name 
-  Email Address
-  Password
-
-  Claim your free trial 
-
-  By clicking the button, you are agreeing to our Terms and Services
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
-</body>
+          <input
+            class="form__input form__submit inset-shadow"
+            type="submit"
+            value="Claim your free trial"
+          />
+          <p class="form__terms">
+            By clicking the button, you are agreeing to our
+            <a href="#">Terms and Services</a>
+          </p>
+        </form>
+      </section>
+    </main>
+    <footer>
+      <p>
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >
+        . Coded by
+        <a href="https://github.com/bramizdev">@bramizdev</a>.
+      </p>
+    </footer>
+  </body>
 </html>
