📑 Add succesful modal

--- a/index.html
+++ b/index.html
@@ -139,5 +139,25 @@
         <a href="https://github.com/bramizdev">@bramizdev</a>.
       </p>
     </footer>
+    <dialog class="modal" id="modal">
+      <div class="modal-content">
+        <img
+          class="modal__success-icon"
+          src="./images/icon-success.svg"
+          alt=""
+          aria-hidden="true"
+          height="100"
+          width="100"
+        />
+        <h2 class="modal__heading">Congratulations and welcome!</h2>
+        <p>
+          See how experienced developers solve problems in real-time. It's one
+          thing to watch scripted tutorials, but understanding how developers
+          think is invaluable.
+        </p>
+        <p>Thank you for joining us!</p>
+        <button class="btn-close shadow" id="close-modal">Close</button>
+      </div>
+    </dialog>
   </body>
 </html>
